
Changelist for FlowPaint


  FlowPaint v. 0.1

    Enhancements 
      * Issue 12 (High):  Zipped binary package
      * Issue 21 (High):  Brush selection UI

    Bugfixes 
      * Issue 1 (Critical):  A stroke in the direction of the stroke angle sometimes produces circular dots
      * Issue 3 (Critical):  Blobs / wild angle changes appear along stroke when drawing slowly straight up/down/left/right
      * Issue 6 (High):  About dialog wording changes


This changelist was automatically generated on 2008-11-19.