@@ -7,11 +7,21 @@ Changelist for FlowPaint
     Enhancements 
       * Issue 12 (High):  Zipped binary package
       * Issue 21 (High):  Brush selection UI
+      * Issue 22 (High):  Gradient Ink
+      * Issue 24 (High):  NoiseInk
+      * Issue 25 (High):  Create hard-coded default brushes
 
-    Bugfixes 
+    Fixed bugs 
       * Issue 1 (Critical):  A stroke in the direction of the stroke angle sometimes produces circular dots
       * Issue 3 (Critical):  Blobs / wild angle changes appear along stroke when drawing slowly straight up/down/left/right
       * Issue 6 (High):  About dialog wording changes
+      * Issue 5 (Low):  Add Mnemonics to menus
+      * Issue 28 (Low):  Write / generate changes.txt
+
+    Known open bugs 
+      * Issue 27 (Medium):  Write readme.txt file
+      * Issue 4 (Medium):  One pixel wide empty or duplicated lines along a brush stroke, at segment edges
+      * Issue 2 (Low):  Missing pixels along brush stroke
 
 
-This changelist was automatically generated on 2008-11-19.
+This changelist was automatically generated on 2008-11-21.
